--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <p class=" aboutMeHonesty aboutMeP">
 
-            My name is Alex Ye. I aspire to become a game developer because I play games on my spare time and are interested in developing them myself. Other than that, I don't think
+            My name is Alex Ye. I aspire to become a game developer because I play games on my spare time and is interested in developing them myself. Other than that, I don't think
             I have anything else that I think it interesting enough to share.
 
         </p>
