--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Alex Ye</h1>
         <p>Game Developer</p>
         <div >
-            <a class="buttons" href="" download="#">Resume</a>
+            <a class="buttons" href="alexResume.pdf" download>Resume</a>
             <a id="contactButton" class="buttons" href="#formSection">Contact Me</a>
         </div>
     </div>
